<?xml version="1.0" encoding="utf-8"?>

<!-- 06_プロファイル画面 レイアウト -->
<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.meow.toilet.log.R" />

        <import type="com.meow.toilet.log.util.binding.GenderConverter" />

        <variable
            name="viewModel"
            type="com.meow.toilet.log.screen.n06_Profile.ProfileViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fill_white">

        <ScrollView
            android:id="@+id/profile_input_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/register_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/fill_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_name"
                    style="@style/EditTextFilled"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    app:errorEnabled="true"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_name"
                        style="@style/BaseText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="@={ viewModel.name }"
                        tools:text="LILY" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_breed"
                    style="@style/EditTextFilled"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_input_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_breed"
                        style="@style/BaseText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_breed"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="@={ viewModel.breed }" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/gender_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/hint_gender"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/text_size_text_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_input_breed" />

                <RadioGroup
                    android:id="@+id/radio_button_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:checkedButton="@={ GenderConverter.toInt(viewModel.gender) }"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gender_label">

                    <RadioButton
                        android:id="@+id/radio_button_gender_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@string/gender_male"
                        android:textAppearance="@style/BaseText"
                        tools:checked="true" />

                    <RadioButton
                        android:id="@+id/radio_button_gender_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@string/gender_female"
                        android:textAppearance="@style/BaseText" />

                    <RadioButton
                        android:id="@+id/radio_button_gender_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_other"
                        android:textAppearance="@style/BaseText" />

                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_date_of_birth"
                    style="@style/EditTextFilled"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="2dp"
                    app:errorEnabled="true"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/radio_button_gender">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/picker_text_date_of_birth"
                        style="@style/BaseText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/hint_date_of_birth"
                        android:maxLines="1"
                        app:patternResId="@{ R.string.format_yyyyMd }"
                        app:text="@{ viewModel.dateOfBirth }"
                        tools:text="2020年9月16日" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_weight"
                    style="@style/EditTextFilled"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_input_date_of_birth">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_weight"
                        style="@style/BaseText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_weight"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:text="@={ viewModel.weight }" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/register_button"
            style="@style/BaseButton.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:enabled="@{ viewModel.buttonEnabledState }"
            android:onClick="@{ () -> viewModel.onClickRegister() }"
            android:text="@string/button_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_input_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>