<?xml version="1.0" encoding="utf-8"?>

<!-- 04_ログ画面 レイアウト -->
<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.meow.toilet.log.screen.n04_Log.LogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fill_white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/display_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/month"
                style="@style/BaseText.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{ viewModel.displayMonthTitle }"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/next"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="2022年1月" />

            <ImageView
                android:id="@+id/before"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/before"
                android:onClick="@{ () -> viewModel.onClickBefore() }"
                android:src="@drawable/ic_baseline_navigate_before_24"
                app:layout_constraintEnd_toStartOf="@id/next"
                app:layout_constraintStart_toEndOf="@id/month"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/next"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/next"
                android:onClick="@{ () -> viewModel.onClickNext() }"
                android:src="@drawable/ic_baseline_navigate_next_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/before"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/fill_light_gray"
            android:paddingVertical="10dp"
            android:visibility="@{ safeUnbox(viewModel.isLogEmpty()) ? View.INVISIBLE : View.VISIBLE }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/display_month">

            <TextView
                android:id="@+id/urine"
                style="@style/BaseText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/urine"
                app:layout_constraintEnd_toStartOf="@id/stool"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/stool"
                style="@style/BaseText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/stool"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/urine"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/fill_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:adapter="@{ viewModel.adapter }"
                    tools:itemCount="10"
                    tools:listitem="@layout/log_list_item" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <TextView
            style="@style/BaseText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/log_empty_message"
            android:visibility="@{ safeUnbox(viewModel.isLogEmpty()) ? View.VISIBLE : View.GONE }"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/display_month"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>